atualizando api event+
